--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^5.2.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-iframe": "^1.3.3",
     "react-motion": "^0.5.2",
     "react-scripts": "1.1.4",
     "react-transition-group": "^1.2.1"
