--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://baileysiber.github.io/Site",
   "dependencies": {
     "concurrently": "^3.6.1",
+    "gh-pages": "^2.1.1",
     "mongoose": "^5.2.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -16,7 +18,9 @@
     "start": "concurrently -k 'node server.js' 'react-scripts start'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "proxy": "http://localhost:3001"
 }
