--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-iframe": "^1.3.3",
     "react-motion": "^0.5.2",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "serverless-http": "^2.3.2"
   },
   "scripts": {
     "start": "concurrently -k 'node server.js' 'react-scripts start'",
