--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [[redirects]]
-  from = "/api/contact"
-  to = "https://bailey-site.herokuapp.com/api/contact"
+  from = "/*"
+  to = "https://bailey-site.herokuapp.com/:splat"
   status = 200
+  force = true
