--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,3 @@
 [[redirects]]
-  from = "/*"
-  to = "https://bailey-site.herokuapp.com/:splat"
-  status = 200
-  force = true
+  from = "/api/*"
+  to = "https://bailey-site.herokuapp.com/api/:splat"
