--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [[redirects]]
-  from = "/api/*"
-  to = "https://bailey-site.herokuapp.com/api/:splat"
+  from = "/api/contact"
+  to = "https://bailey-site.herokuapp.com/api/contact"
