--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "gh-pages": "^2.1.1",
     "mongoose": "^5.7.5",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.13.1",
     "react-iframe": "^1.3.3",
     "react-motion": "^0.5.2",
+    "react-resize-detector": "^4.2.1",
     "react-scripts": "1.1.4",
     "react-transition-group": "^1.2.1",
     "serverless-http": "^2.3.2"
