--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "concurrently": "^3.6.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "gh-pages": "^2.1.1",
     "mongoose": "^5.7.5",
     "react": "^16.4.2",
